<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:textAlignment="center"
        android:text="@string/TituloEjercicio1"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="80dp" />

    <RadioGroup
        android:id="@+id/Respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuesta2" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuesta3" />

        <RadioButton
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuesta4" />

    </RadioGroup>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="80dp" />

    <Button
        android:id="@+id/btn_ej2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:height="100dp"
        android:onClick="ejemplo1"
        android:text="@string/btn_enviar" />


</LinearLayout>