<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:text="@string/TituloEjercicio1"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="80dp" />

    <Button
        android:id="@+id/btn_Gracias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:height="100dp"
        android:text="@string/btn_gracias" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btn_Estornudar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:height="100dp"
        android:text="@string/btn_estornudar" />
</LinearLayout>